Updated by task 'FY25_March_AA_ReleaseNotes_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/f210f85f6ff1391db6dbf59b19eb9c81752c948a

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -5,15 +5,15 @@ feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
 source-git-commit: 16046af6b7a78bdc4bfaf7e5ec7d05c55f2ebc01
-workflow-type: tm+mt
-source-wordcount: '11583'
+workflow-type: ht
+source-wordcount: '11579'
 ht-degree: 100%
 
 ---
 
 # Notas de la versión de Adobe Analytics de 2023
 
-Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
+Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/products/adobe-experience-cloud-products.html?lang=es). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
 
 ## Diciembre de 2023
 
@@ -32,7 +32,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 * Se han solucionado problemas en los que los informes de A4T no aparecían en la interfaz de usuario de Target/Analytics. (AN-329375, AN-329745, AN-330026)
 
@@ -69,7 +69,7 @@ AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 * Se ha corregido un problema que impedía que los datos de clasificación se mostraran en Workspace. (AN-326827)
 
@@ -95,7 +95,7 @@ AN-314882; AN-315591; AN-318165; AN-318559; AN-319031; AN-319244; AN-321657; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 * Se ha corregido un problema con los eventos personalizados que no conseguían cargarse. (AN-324163)
 * Se ha corregido un problema que impedía editar etiquetas para las leyendas en una visualización. (AN-323246)
@@ -135,7 +135,7 @@ AN-315605; AN-316306; AN-317494; AN-317844; AN-320424; AN-320597; AN-320680; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 AN-307816; AN-318111; AN-318584; AN-318828; AN-320440; AN-320568; AN-320616; AN-321013; AN-321513; AN-321520; AN-321757; AN-321820; AN-321917; AN-322034; AN-322135; AN-322140; AN-322142; AN-322251; AN-322353; AN-322378; AN-322383; AN-322427; AN-322458; AN-322543; AN-322630; AN-322637; AN-322638; AN-322647; AN-322728; AN-322732; AN-322777; AN-322817; AN-322957; AN-322958; AN-323035; AN-323074; AN-323150; AN-323196; AN-323197; AN-323205; AN-323206; AN-323217; AN-323224; AN-323225; AN-323244; AN-323257; AN-323277; AN-323280; AN-323293; AN-323309; AN-323318; AN-323468; AN-323476; AN-323514; AN-323572; AN-323592; AN-323782; AN-323835
 
@@ -211,7 +211,7 @@ AN-311878; AN-313968; AN-314130; AN-315701; AN-315761; AN-316613; AN-317563; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-315744; AN-311772; AN-318719; AN-314074; AN-316651<!--"Verified" status-->; AN-318602; AN-315961; AN-317534; AN-318607; AN-316498; AN-316648; AN-318244; AN-317747; AN-318432; AN-318231; AN-317590; AN-318415; AN-318154; AN-316647; N-314417; AN-317614; AN-317725; AN-318114; AN-317876; AN-318052; AN-317966; AN-316477; AN-318036; AN-317931; AN-318045; AN-316246; AN-317281; AN-317879; AN-308077; AN-317708; AN-316115; AN-315963
 
@@ -244,7 +244,7 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 | ----------- | ---------- | ------- | ---- |
 | **Relleno para zonas protegidas que no sean de producción** | Al crear un flujo de datos del conector de origen de Analytics en una zona protegida que no sea de producción, el relleno de las zonas protegidas que no sean de producción estará limitado a 3 meses. Permanecerá a los 13 meses para las zonas protegidas de producción. | N/A | 26 de abril de 2023 |
 | **Filtrado de filas y columnas para el streaming del conector de origen de Analytics** | El conector de origen de Analytics en Adobe Experience Platform ahora permite filtrar los datos de Analytics que se usan para rellenar perfiles en el [Perfil del cliente en tiempo real](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=es). El filtrado de nivel de fila reduce el número de eventos asociados a perfiles. El filtrado a nivel de columna ayuda a reducir la riqueza de los propios eventos, lo que permite optimizar el uso de derechos de perfil. Este filtrado solo se aplica a los datos enviados al perfil del cliente en tiempo real y al [Servicio de identidad](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=es). **El filtrado no afecta a los datos que se envían al lago de datos para su uso en aplicaciones como Customer Journey Analytics**. [Más información](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=es#filtering-for-profile) | N/A | 29 de marzo de 2023 |
-| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe.  | N/A | 31 de marzo de 2023 |
+| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. | N/A | 31 de marzo de 2023 |
 | **Ofuscación de IP para la red Edge de Adobe Experience Platform** | Planes de Adobe para que la red Edge admita la ofuscación de IP para los datos enviados directamente a Adobe Experience Platform. Este cambio beneficia a los clientes que envían datos directamente a Platform para su uso en Customer Journey Analytics u otras soluciones de Platform. La confusión de IP se ajusta en el nivel de flujo de datos. Admite la eliminación del último octeto o de toda la dirección IP.<p>**Nota**: La confusión NO se aplica a los datos enviados a Adobe Analytics. Analytics sigue obteniendo la IP completa. El procesamiento de IP se sigue realizando en Analytics por separado. En el futuro, Adobe planea permitir que los datos de Analytics se ofusquen en el nivel de red Edge. | N/A | Lanzamiento de Adobe Experience Platform el 26 de abril de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | 29 de marzo de 2023 |
 | **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | <p>Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es#share-public-link)</p> <p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html?lang=es#company-preferences)</p> | 3 de mayo de 2023 | Junio de 2023 |
@@ -252,7 +252,7 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 
 {style="table-layout:auto"}
 
-## Correcciones en Adobe Analytics
+## Correcciones de Adobe Analytics
 
 * Se ha corregido un problema con los archivos de búsqueda de Operating System.tsv en la fuente de datos.
 * Se ha corregido un problema con los valores de las métricas que diferían entre Reports &amp; Analytics y Workspace (AN-315965).
@@ -300,7 +300,7 @@ AN-288373; AN-305144; AN-309023; AN-310466; AN-311686; AN-311705; AN-312018; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-311665; AN-311948; AN-312108; AN-312114; AN-312142; AN-312143; AN-312389; AN-312391; AN-312431; AN-312453; AN-312454; AN-312458; AN-312503; AN-312533; AN-312682; AN-312698; AN-312714; AN-312738; AN-312807; AN-312829; AN-312849; AN-312875; AN-312980; AN-312997; AN-313059; AN-313077; AN-313110; AN-313195; AN-313196; AN-313258; AN-313554; AN-313580; AN-313702; AN-313820; AN-313844; AN-313859; AN-313879; AN-314273
 
@@ -340,7 +340,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 -302282; AN-303127; AN-303541; AN-303550; AN-305282; AN-306504; AN-307351; AN-307496; AN-307530; AN-307947; AN-308497; AN-; AN-308610; AN-308777; AN-308994; AN-309143; AN-309404; AN-309414; AN-309445; AN-309575; AN-309630; AN-309658; AN-309690; AN-309742; AN-309861; AN-309967; AN-309973; AN-310059; AN-310132; AN-310168; AN-310238; AN-310241; AN-310301; AN-310318; AN-310324; AN-310335; AN-310338; AN-310460; AN-310500; AN-310684; AN-310690; AN-311010; AN-311022; AN-311043; AN-311125; AN-311250; AN-311370; AN-311458;
 
@@ -377,7 +377,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 {style="table-layout:auto"}
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-301745; AN-302238; AN-302521; AN-302601; AN-303325; AN-303363; AN-303867; AN-304120; AN-304185; AN-304221; AN-304222; AN-304510; AN-304591; AN-304872; AN-305151; AN-305159; AN-305233; AN-305235; AN-305241; AN-305250; AN-305274; AN-305292; AN-305311; AN-305314; AN-305331; AN-305335; AN-305348; AN-305372; AN-305382; AN-305442; AN-305504; AN-305517; AN-305572; AN-305584; AN-305588; AN-305612; AN-305640; AN-305663; AN-305718; AN-305723; AN-305767; AN-305769; AN-305703; AN-305711; AN-305775; AN-305883; AN-305886; AN-305882; AN-305886; AN-305916; AN-305969; AN-305997; AN-306052; AN-306088; AN-306199; AN-306214; AN-306233; AN-306251; AN-306348; AN-306372; AN-306390; AN-306413; AN-306430; AN-306514; AN-306578; AN-306612; AN-306886; AN-306893; AN-306905; AN-306984; AN-306989; AN-307038; AN-307061; AN-307062; AN-307176; AN-307209; AN-307233; AN-307257; AN-307280; AN-307292; AN-307293; AN-307318; AN-307319; AN-307320; AN-307325; AN-307368; AN-307381; AN-307403; AN-307461; AN-307480; AN-307650; AN-307767; AN-307790; AN-307813; AN-307833; AN-307835; AN-307867; AN-307899; AN-307907; AN-307934; AN-307991; AN-308031; AN-308057; AN-308240; AN-308242; AN-308302; AN-308363; AN-308373; AN-308450; AN-308591; AN-308673; AN-308725; AN-309171;
 
@@ -390,7 +390,7 @@ AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-
 | **Pausa de informes programados en Reports &amp; Analytics** | 6 de enero de 2023 | Este es un recordatorio de que Adobe dejará de usar estas funciones el **31 de enero de 2023**. Tenga en cuenta que los plazos de caducidad para los informes y los extractos de datos seguirán estando limitados a nueve meses; la entrega de informes y extracciones de datos se pausará al final de este periodo a menos que se reactive la programación.<p>Para reiterar, estas funciones quedarán obsoletas el 31 de enero de 2023. Antes de esta fecha, debe migrar los informes programados a uno de los demás mecanismos disponibles en Adobe Analytics. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. |
 | **Pausa de tareas programadas en el Report Builder** | 6 de enero de 2023 | El **31 de enero de 2023**, Adobe implementó cambios en las tareas programadas en Report Builder como parte de nuestros esfuerzos de optimización del rendimiento y la entrega. Estos cambios incluían la eliminación de la capacidad de que los envíos programados “terminen después de x incidencias”.<p>Puede continuar programando tareas de Report Builder por hora y hacer que finalicen después de un máximo de 99 incidencias. Tenga en cuenta que la reversión solo se aplica a tareas por hora; el evento “terminar después de x incidencias” permanecerá no disponible para todos los demás intervalos de entrega (diario, semanal, mensual y anual). Tenga en cuenta que esta opción quedará obsoleta el 31 de enero de 2023. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. [Más información](/help/analyze/legacy-report-builder/r-arb-scheduled-reports.md) |
 | **Asignación de IP a geolocalización mejorada** | 4 de enero de 2023 | Nuestro proveedor de búsquedas de IP, Digital Element, está actualizando a un nuevo conjunto de datos mejorado (NetAcuity Pulse) para la asignación de IP a geolocalización. Originalmente planificado para octubre de 2022, Adobe Analytics adoptó este nuevo conjunto de datos el **11 de enero de 2023**. La nueva base de datos es más precisa que las versiones anteriores. Algunas asignaciones de IP a regiones cambian o mejoran al adoptarse la nueva base de datos.<p>Todas las herramientas de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, fuentes de datos de Analytics, etc.) aprovechan automáticamente las nuevas asignaciones mejoradas. No hay cambios en el formato de los datos en las fuentes de datos. Los datos de Customer Journey Analytics proporcionados a través del conector de origen de Analytics también aprovechan automáticamente las nuevas asignaciones. |
-| **Actualización de la nueva base de datos de operadores de NetAcuity** | 4 de enero de 2023 | Esta actualización, originalmente planificada para el 5 de octubre de 2022, se ha realizado el **11 de enero de 2023**. La información relacionada con el operador de telefonía se almacena en el campo `carrier` en Adobe Analytics Data Warehouse y las fuentes de datos de Analytics cambiarán. Históricamente, el formato de datos de esa columna se ha `<domain>:<ISP>`. Adobe ha mantenido una tabla de búsqueda interna para asignar estos valores `<domain>:<ISP>` en nombres de operadores para la creación de informes en las herramientas con este fin de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.). El archivo de búsqueda (`carrier.tsv`) también se proporciona con fuentes de datos para que pueda utilizar las mismas asignaciones.<p>Esta actualización del estado mejora nuestras asignaciones de operadores mediante el uso de una base de datos de operadores más precisa de NetAcuity. El formato de los datos de la columna de operador de las fuentes de datos cambia de ahora en adelante. En lugar de `<domain>:<ISP>`, contiene un nombre de operador. Adobe sigue utilizando la tabla de búsqueda para mantener la mayor continuidad posible con los informes anteriores. Herramientas de creación de informes donde Adobe aplica las búsquedas (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.) se beneficia de asignaciones más precisas. Algunas asignaciones, especialmente para dominios internacionales e ISP, cambian más que otras cuando Adobe adopta la nueva base de datos. El archivo de búsqueda del operador de fuentes de datos (`carrier.tsv`) mantiene las asignaciones antiguas y añade las nuevas.<p>El conector de origen de Analytics no asigna actualmente el campo del operador, por lo que el sistema de informes del operador no está disponible actualmente en Experience Platform, Customer Journey Analytics, etc. Por lo tanto, el uso de la nueva base de datos de operadores no afecta a nada en Experience Platform que se base en los datos proporcionados por el conector de origen de Analytics. |
+| **Actualización de la nueva base de datos de operadores de NetAcuity** | 4 de enero de 2023 | Esta actualización, originalmente planificada para el 5 de octubre de 2022, se ha realizado el **11 de enero de 2023**. La información relacionada con el operador de telefonía se almacena en el campo `carrier` en Adobe Analytics Data Warehouse y las fuentes de datos de Analytics cambiarán. Históricamente, el formato de datos de esa columna se ha `<domain>:<ISP>`. Adobe ha mantenido una tabla de búsqueda interna para asignar estos valores `<domain>:<ISP>` en nombres de operadores para la creación de informes en las herramientas con este fin de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.). El archivo de búsqueda (`carrier.tsv`) también se proporciona con fuentes de datos para que pueda utilizar las mismas asignaciones.<p>Esta actualización del estado mejora nuestras asignaciones de operadores mediante el uso de una base de datos de operadores más precisa de NetAcuity. El formato de los datos de la columna de operador de las fuentes de datos cambia de ahora en adelante. En lugar de `<domain>:<ISP>`, contiene un nombre de operador. Adobe sigue utilizando la tabla de búsqueda para mantener la mayor continuidad posible con los informes anteriores. Las herramientas de creación de informes donde Adobe aplica las consultas (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.) se benefician de asignaciones más precisas. Algunas asignaciones, especialmente para dominios internacionales e ISP, cambian más que otras cuando Adobe adopta la nueva base de datos. El archivo de búsqueda del operador de fuentes de datos (`carrier.tsv`) mantiene las asignaciones antiguas y añade las nuevas.<p>El conector de origen de Analytics no asigna actualmente el campo del operador, por lo que el sistema de informes del operador no está disponible actualmente en Experience Platform, Customer Journey Analytics, etc. Por lo tanto, el uso de la nueva base de datos de operadores no afecta a nada en Experience Platform que se base en los datos proporcionados por el conector de origen de Analytics. |
 | **Directrices actualizadas para notificaciones de picos de tráfico** | 18 de noviembre de 2022 | Las directrices anteriores se basaban estrictamente en los volúmenes de visitas. La variable [nuevas directrices](/help/admin/admin/c-manage-report-suites/c-edit-report-suites/c-traffic-management/t-traffic-schedule-spike.md) se basan en una combinación de tamaño y aumento porcentual del grupo de informes. |
 
 {style="table-layout:auto"}
