--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -4,7 +4,7 @@ description: Notas de la versión de Analytics de 2025
 feature: Release Notes
 exl-id: 47f23b62-81f2-4b4d-8908-3e33c693b4e3
 source-git-commit: ccec6a9ab69e21b814d5e63088992b9147060d17
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1392'
 ht-degree: 100%
 
@@ -25,7 +25,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 | **Actualizar al campo de datos de contexto de Analytics`a.locale`** | Una actualización programada cambiará la forma en que se establece el campo de datos de contexto `a.locale` de Analytics al recopilar datos mediante Experience Edge. Cuando se envían datos a Adobe Analytics mediante Experience Edge, los campos de Analytics se rellenan en función de una asignación de campos XDM. La asignación de `c.a.locale` hace referencia a un campo XDM no estándar, `xdm.environment.language`. Este campo se actualizará para hacer referencia al campo correcto, `xdm.environment._dc.language`.<p>La asignación seguirá haciendo referencia a `xdm.environment.language` de cara a la compatibilidad con versiones anteriores. Para mantener la continuidad, si se establecen ambos campos, `xdm.environment.language` tendrá prioridad. Puede ver la lista completa de asignaciones de XDM a campos estándar de Analytics [aquí](https://experienceleague.adobe.com/es/docs/analytics/implementation/aep-edge/xdm-var-mapping). | | 5 de marzo de 2025 |
 
 
-### Correcciones en Adobe Analytics
+### Correcciones de Adobe Analytics
 
 **Analysis Workspace**: AN-359974; AN-366212; AN-368460
 **Clasificaciones**: AN-367186; AN-367328; AN-368548
@@ -66,7 +66,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 | **Mejoras en los informes (también conocidos como plantillas) en Analysis Workspace** | Ya hay varias mejoras disponibles para los informes (también conocidos como plantillas):<ul><li>Ahora se denominan [!UICONTROL Plantillas] (no [!UICONTROL Informes]).</li><li>Se ha mejorado la experiencia del usuario para ver y buscar plantillas, incluida la opción de ver plantillas en vista de columna o en vista de tarjeta.</li><li>Ubicación nueva y más intuitiva para las plantillas de compañía (ubicadas en **[!UICONTROL Espacio de trabajo]** > **[!UICONTROL Plantillas]**).</li><li>Anteriormente, se tenía acceso a las plantillas de compañía al crear un proyecto desde el cuadro de diálogo.</li><li>Hay más plantillas generadas previamente disponibles.</li></ul>[Más información](https://experienceleague.adobe.com/es/docs/analytics/analyze/analysis-workspace/templates/use-templates).<p>Los administradores pueden crear plantillas personalizadas y guardarlas para que otros usuarios de su compañía las utilicen en la misma sesión. [Más información](https://experienceleague.adobe.com/es/docs/analytics/analyze/analysis-workspace/templates/create-templates) | 15 de enero de 2025 | 30 de enero de 2025 |
 | **Período de retención del ID de transacción** | El periodo de retención del ID de transacción de 90 días se ampliará a 25 meses en febrero de 2025. La variable `transactionID` identifica de forma exclusiva una transacción para que la visita se pueda enlazar a los datos cargados a través de las fuentes de datos. (Vínculos a la documentación próximamente) |  | 11 de febrero de 2025 |
 
-## Correcciones en Adobe Analytics
+## Correcciones de Adobe Analytics
 
 **A4T**: AN-355602; AN-365988
 **Activity Map**: AN-365320
