--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -3,10 +3,10 @@ title: Ver las notas de la versión de Adobe Analytics de 2025
 description: Notas de la versión de Analytics de 2025
 feature: Release Notes
 exl-id: 47f23b62-81f2-4b4d-8908-3e33c693b4e3
-source-git-commit: ccec6a9ab69e21b814d5e63088992b9147060d17
-workflow-type: ht
-source-wordcount: '1392'
-ht-degree: 100%
+source-git-commit: e0f6b7b5b2933add7f67873a945b78e4200116eb
+workflow-type: tm+mt
+source-wordcount: '1402'
+ht-degree: 98%
 
 ---
 
@@ -54,7 +54,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 ## AppMeasurement
 
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.26.0), consulte las [notas de la versión de AppMeasurement para JavaScript](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=es).
+Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte [Notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
 
 
 
@@ -102,3 +102,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 | --- | --- | --- |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 17 de enero de 2025 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **30 de junio de 2025**. Adobe I/O no permitirá que se creen nuevas credenciales de JWT a partir del 1 de mayo de 2024. Los clientes que utilizan JWT deben crear una nueva credencial de servidor a servidor OAuth o migrar su credencial JWT existente a una credencial de servidor a servidor OAuth. Los clientes también deben actualizar sus aplicaciones cliente para utilizar las nuevas credenciales de servidor a servidor de OAuth. <ul><li>[Migración de credenciales de cuenta de servicio (JWT)](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/migration/)</li><li>[Guía de implementación para aplicaciones nuevas y antiguas con OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)<li>[Uso de las nuevas credenciales de servidor a servidor de OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)</li><li>[Preguntas frecuentes](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/faqs/)</li></ul> |
 | **Final de la vida útil de la API de Adobe Analytics (versión 1.4)** | 17 de julio de 2024 | El **12 de agosto de 2026**, los siguientes servicios de la API heredada de Analytics llegarán al final de su vida útil y se cerrarán, y las integraciones actuales creadas con estos servicios dejarán de funcionar:<ul><li>API de Adobe Analytics (versión 1.4)</li><li>Autenticación WSSE de Adobe Analytics</li></ul><p>Las integraciones que usan la API de Adobe Analytics (versión 1.4) deben migrarse a la [API de Adobe Analytics 2.0](https://developer.adobe.com/analytics-apis/docs/2.0/), mientras que las integraciones de WSSE deben migrarse a un protocolo de autenticación basado en OAuth en [Adobe Developer Console](https://developer.adobe.com/console).</p><p>Consulte las [preguntas frecuentes sobre el final de la vida útil de la API de Adobe Analytics 1.4](/help/admin/c-admin-api/c-admin-14-api-eol.md) para obtener respuestas a dudas comunes y más indicaciones.</p> |
+
+## AppMeasurement
+
+Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte [Notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
