Updated by task 'AUTO_HANDOFF_1743603056506'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/cade41d5f9f812d4b8b0580d28e97adf6409110c

--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2025
 feature: Release Notes
 exl-id: 47f23b62-81f2-4b4d-8908-3e33c693b4e3
 source-git-commit: e0f6b7b5b2933add7f67873a945b78e4200116eb
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1402'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -54,7 +54,7 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 ## AppMeasurement
 
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte [Notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
+Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte las [notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
 
 
 
@@ -105,4 +105,4 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 
 ## AppMeasurement
 
-Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte [Notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
+Para obtener las últimas actualizaciones de las versiones de AppMeasurement, consulte las [notas de la versión de AppMeasurement](https://github.com/adobe/appmeasurement/releases).
